--- a/01_Day_Introduction/01_day_starter/index.html
+++ b/01_Day_Introduction/01_day_starter/index.html
@@ -7,7 +7,7 @@
 
 <body>
         <h1>30DaysOfJavaScript:03 Day</h1>
-        <h2>Introduction</h2>
+        <h2>Introduction to Javascript</h2>
         <button onclick="alert('Welcome to 30DaysOfJavaScript!');">Click Me</button>
         <script src="./helloworld.js"></script>
         <script src="./introduction.js"></script>
