--- a/03_Day_Booleans_operators_date/03_day_starter/index.html
+++ b/03_Day_Booleans_operators_date/03_day_starter/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>30DaysOfJavaScript:03 Day</h1>
     <h2>Booleans, undefined, null, date object</h2>
+    <h3>Closed And Completed</h3>
 
     <!-- import your scripts here -->
     <script src="./scripts/main.js"></script>
